Bug 42151 - FILEOPEN: incorrect column splitting in opened RTF document
Summary: FILEOPEN: incorrect column splitting in opened RTF document
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: BSA
Keywords:
: 43168 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-24 01:54 UTC by pm2kan
Modified: 2012-03-19 14:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Test file and screenshots (134.50 KB, application/zip)
2011-10-24 01:54 UTC, pm2kan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pm2kan 2011-10-24 01:54:15 UTC
Created attachment 52680 [details]
Test file and screenshots

Problem description: 

Attached .rtf document displayed incorrectly.

Current behavior:

LibreOffice 3.4.3 OOO340m1 (Build:302) show it as test-lo343.png

In 3.4.3 it looks like bug #37886, but master also shows it incorrectly:
LibO-dev 3.5.0 Build ID: 302bb2c-a8230c2-9c6ea62-b3748d3 show it as test-lo35dev.png

Expected behavior:

test-wviewer.png

Platform (if different from the browser): 

Win XP SP3, x86
Comment 1 Jean-Baptiste Faure 2011-12-18 08:28:29 UTC
No change from master with LO 3.5.0 beta-1 (LibreOffice 3.5.0beta1+ Build ID: ddc7af3-7f15fca-8eae9f1-ca8e46d-5bcbce4) under Ubuntu 10.04 x86_64.

There is other bug reports about tables in RTF documents, for example bug 37886 which is fixed and seems slightly different.

Changing version to the oldest version in which the bug is present.

Miklos: I don't know if you are aware of this case. Please feel free to reassign if you can't handle this bug.

Best regards. JBF
Comment 2 Jean-Baptiste Faure 2011-12-18 09:12:46 UTC
*** Bug 43168 has been marked as a duplicate of this bug. ***
Comment 3 Miklos Vajna 2011-12-18 09:20:34 UTC
JBF,

Yes, I got the notification, will have a look soon.

Thanks,

Miklos
Comment 4 Miklos Vajna 2012-01-09 03:58:13 UTC
This should be almost OK since the fix for bug 44053 (in master and -3-5), but the vertical merge is still not imported properly + the vertical text direction is ignored as well.
Comment 5 Miklos Vajna 2012-01-09 07:48:45 UTC
I take the text orientation back, that would be a new feature, it was never supported by the RTF import.

The vertical merges are fixed in master: http://cgit.freedesktop.org/libreoffice/core/commit/?id=7ec8f13d3ac0650c7e62e31220f1eda9d0a9284c

Cherry-picked to -3-5: http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-3-5&id=00a2444e051aaa2495b20a651f3ae096b4ff3cad
Comment 6 Miklos Vajna 2012-01-09 11:15:30 UTC
Cell text flow is implemented in master: http://cgit.freedesktop.org/libreoffice/core/commit/?id=3dbe4c18d0df62fa28fa69052ffb37c90af077f2
Comment 7 Jean-Baptiste Faure 2012-03-19 14:34:27 UTC
In LO 3.5.1 works as expected unless vertical text orientation in cells.

In master (next LO 3.6) (LibreOffice 3.6.0alpha0+ Build ID: 08ba87c-49d3d39-e67b1bf-879ce36-638d9c) vertical text orientation in cells has been implemented and works well.

So closing. Thank you.