fdo#42151 fix RTF import of vertically merged table cells

The problem was that \row took care of states (which is right, since
\trowd wants to reset row properties to the default state), but it
should not respect state pops.
(cherry picked from commit 7ec8f13d3ac0650c7e62e31220f1eda9d0a9284c)